
removed some warnings, still a few left in dox/file.c

-------------------------------------------------------------------------------

Tue Mar 14 22:32:08 GMT 2000
(gilbertt)

Patches from Bob Arendt <rdarendt@cwcom.net> to enable a user-configurable
cache-dir. Solves some preformance problems on NFS-mounted home directories.
Also fixes a couple of bugs with the current -econfdir option.

Patches here for scripts and stuff.

-------------------------------------------------------------------------------

Mon Mar 27 21:35:50 GMT 2000
(gilbertt)

.spec file fixups in preparation for 0.16.4

-------------------------------------------------------------------------------

Thu Jul 27 14:32:49 PDT 2000
(Mandrake)

this will be 0.16.5 :)

-------------------------------------------------------------------------------

Sat Oct 14 17:59:33 CDT 2000
(Term)

Bump up the minor version on a bunch of missed files.

-------------------------------------------------------------------------------

Mon Feb  4 10:39:42 EST 2002
(KainX)

Applied patch from Boris Buegling <boris@icculus.org> for XFree86 4.2.0.

-------------------------------------------------------------------------------

Sun Mar 23 22:45:31 EST 2003
(KainX)

Patch from Kim Woelders <kim@woelders.dk> for freedesktop.org WM hints.

-------------------------------------------------------------------------------

Sun Mar 23 22:59:34 EST 2003
(KainX)

Add Kim to the AUTHORS file, and run ecvs for the first time in ages.

-------------------------------------------------------------------------------

Wed Apr  2 17:46:57 EST 2003
(KainX)

Added the setup-gettext.sh script thanks to Christian Hammond
<chipx86@gnupdate.org>.

Replaced gettextize -f in autogen.sh with setup-gettext.sh.

Removed all files in intl/ since they should now be autogenerated by
whatever version of gettext is installed, and different versions have
different files.  Plus they're autogenerated anyway, so they shouldn't
be in CVS to begin with.